# StockFlow

./: .gitignore  CMakeLists.txt  CMakePresets.json  PortfolioApp.cpp  PortfolioApp.h  README.md  kosdaq_code.mst  kospi_code.mst
include/: mainwindow.h
resources/: mainwindow.ui
src/: main.cpp  mainwindow.cpp
src/app/: main.cpp
src/core/: CMakeLists.txt  Config.h.example  FinnhubAPI.cpp  FinnhubAPI.h  KisAPI.cpp  KisAPI.h  NetworkUtils.h  StockAPI.cpp  StockAPI.h  StockCodeMap.cpp  StockCodeMap.h  StockData.h
src/ui/: CMakeLists.txt  StockItemDelegate.cpp  StockItemDelegate.h  StockTableModel.cpp  StockTableModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
